--- a/style.css
+++ b/style.css
@@ -50,7 +50,17 @@ body, html {
         color: white;
         height: 70px;
   }
- 
+  
+  .sticky {
+      position: fixed;
+      top: 0;
+      width: 100%;
+    }
+    
+    /* .sticky + .content {
+      padding-top: 60px;
+    } */
+
   .mp3 {
        height: 25px;
        width: 280px;
